--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "hexlet_code"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 django = "^4.1.3"
+python-dotenv = "^0.21.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^5.0.4"
