--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ packages = [{include = "hexlet_code"}]
 python = "^3.10"
 django = "^4.1.3"
 python-dotenv = "^0.21.0"
+sqlparse = "^0.4.3"
+psycopg2 = "^2.9.5"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^5.0.4"
