--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ django = "^4.1.3"
 python-dotenv = "^0.21.0"
 sqlparse = "^0.4.3"
 psycopg2 = "^2.9.5"
+dj-database-url = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^5.0.4"
