--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: linter-run
+name: test
 on: push
 jobs:
   my-job:
@@ -6,11 +6,11 @@ jobs:
     steps:
             - name: chekout repo
               uses: actions/checkout@v2
-            - name: setup python 
+            - name: setup python
               uses: actions/setup-python@v2
             - name: Install dependencies
               run: |
-                  pip install poetry
-            - name: run linter check
+                  pip install -r requirements.txt
+            - name: run tests
               run: |
-                  make lint
+                  make test
