--- a/.github/workflows/linter-run.yml
+++ b/.github/workflows/linter-run.yml
@@ -10,6 +10,7 @@ jobs:
               uses: actions/setup-python@v2
             - name: Install dependencies
               run: |
+                  python -m pip install --upgrade pip
                   pip install poetry
             - name: run linter check
               run: |
