--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,7 @@ jobs:
               uses: actions/setup-python@v2
             - name: Install dependencies
               run: |
+                  python -m pip install --upgrade pip
                   pip install poetry
                   pip install -r requirements.txt
             - name: run tests
