--- a/.github/workflows/linter-run.yml
+++ b/.github/workflows/linter-run.yml
@@ -10,7 +10,9 @@ jobs:
               uses: actions/setup-python@v2
             - name: Install dependencies
               run: |
+                  python -m pip install --upgrade pip
                   pip install poetry
+                  make install
             - name: run linter check
               run: |
                   make lint
