--- a/.github/workflows/linter-run.yml
+++ b/.github/workflows/linter-run.yml
@@ -12,6 +12,7 @@ jobs:
               run: |
                   python -m pip install --upgrade pip
                   pip install poetry
+                  pip install flake8
             - name: run linter check
               run: |
                   make lint
