--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 asgiref==3.5.2
-Django==4.1.3
-gunicorn==20.1.0
-sqlparse==0.4.3
-python-dotenv==0.21.0
+beautifulsoup4==4.11.1
+coverage==6.5.0
 dj-database-url==1.0.0
-django-extensions==3.2.1
+Django==4.1.3
 django-bootstrap4==22.2
+django-extensions==3.2.1
+gunicorn==20.1.0
+python-dotenv==0.21.0
+soupsieve==2.3.2.post1
+sqlparse==0.4.3
