--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -14,7 +14,7 @@ jobs:
           run: |
               python -m pip install --upgrade pip
               pip install poetry
-              pip install -r requirements.txt
+              make install
         - name: run tests
           run: |
               make test
