--- a/.github/workflows/linter-run.yml
+++ b/.github/workflows/linter-run.yml
@@ -12,7 +12,7 @@ jobs:
               run: |
                   python -m pip install --upgrade pip
                   pip install poetry
-                  pip install flake8
+                  make install
             - name: run linter check
               run: |
                   make lint
