--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -1,7 +1,7 @@
 name: test
 on: push
 env:
-  DJANGO_SECRET: {{secrets.DJANGO_SECRET}}
+  DJANGO_SECRET: ${{ secrets.DJANGO_SECRET }}
 jobs:
   my-job:
     runs-on: ubuntu-latest
