--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -2,6 +2,7 @@ name: test
 on: push
 env:
   DJANGO_SECRET: ${{ secrets.DJANGO_SECRET }}
+  DATABASE_URL: 'sqlite:///db.sqlite3'
 jobs:
   my-job:
     runs-on: ubuntu-latest
