--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -1,4 +1,4 @@
-name: test
+name: test-cov
 on: push
 env:
   DJANGO_SECRET: ${{ secrets.DJANGO_SECRET }}
@@ -18,6 +18,15 @@ jobs:
               python -m pip install --upgrade pip
               pip install poetry
               make install
-        - name: run tests
+              pip install coverage
+        - name: run test coverage calculating
           run: |
-              make test
+              poetry run python -m coverage run manage.py test
+        - name: publishing info
+          uses: paambaati/codeclimate-action@v3.2.0
+          env:
+            CC_TEST_REPORTER_ID: ${{ secrets.COV }}
+          with:
+            coverageCommand: python3 -m coverage xml
+            debug: true
+
