--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ sqlparse = "^0.4.3"
 psycopg2-binary = "^2.9.5"
 dj-database-url = "^1.0.0"
 django-bootstrap4 = "^22.2"
+coverage = "^6.5.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^5.0.4"
