--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -1,8 +1,5 @@
-name: test
+name: test-cov
 on: push
-env:
-  DJANGO_SECRET: ${{ secrets.DJANGO_SECRET }}
-  DATABASE_URL: 'sqlite:///db.sqlite3'
 jobs:
   my-job:
     runs-on: ubuntu-latest
@@ -18,6 +15,14 @@ jobs:
               python -m pip install --upgrade pip
               pip install poetry
               make install
-        - name: run tests
+        - name: run test coverage calculating
           run: |
-              make test
+              coverage run manage.py test
+        - name: publishing info
+          uses: paambaati/codeclimate-action@v3.0.0
+          env:
+            CC_TEST_REPORTER_ID: ${{ secrets.COV }}
+          with:
+            coverageCommand: coverage xml
+            debug: true
+
