--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -13,10 +13,9 @@ jobs:
         - name: Install dependencies
           run: |
               python -m pip install --upgrade pip
-              pip install coverage
         - name: run test coverage calculating
           run: |
-              coverage run python3 manage.py test
+              coverage run manage.py test
         - name: publishing info
           uses: paambaati/codeclimate-action@v3.0.0
           env:
