--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -15,7 +15,7 @@ jobs:
               python -m pip install --upgrade pip
         - name: run test coverage calculating
           run: |
-              coverage run manage.py test
+              coverage help
         - name: publishing info
           uses: paambaati/codeclimate-action@v3.0.0
           env:
