--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -15,12 +15,12 @@ jobs:
               python -m pip install --upgrade pip
         - name: run test coverage calculating
           run: |
-              coverage help
+              python3 -m coverage run manage.py test
         - name: publishing info
           uses: paambaati/codeclimate-action@v3.0.0
           env:
             CC_TEST_REPORTER_ID: ${{ secrets.COV }}
           with:
-            coverageCommand: coverage xml
+            coverageCommand: python3 -m coverage xml
             debug: true
 
