--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -13,6 +13,8 @@ jobs:
         - name: Install dependencies
           run: |
               python -m pip install --upgrade pip
+              pip install poetry
+              make install
         - name: run test coverage calculating
           run: |
               python3 -m coverage run manage.py test
