--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -13,13 +13,12 @@ jobs:
         - name: Install dependencies
           run: |
               python -m pip install --upgrade pip
-              pip install poetry
-              make install
+              pip install coverage
         - name: run test coverage calculating
           run: |
-              python3 -m coverage run manage.py test
+              python -m coverage run manage.py test
         - name: publishing info
-          uses: paambaati/codeclimate-action@v3.0.0
+          uses: paambaati/codeclimate-action@v3.2.0
           env:
             CC_TEST_REPORTER_ID: ${{ secrets.COV }}
           with:
