--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -15,6 +15,7 @@ jobs:
               python -m pip install --upgrade pip
               pip install poetry
               make install
+              pip install coverage
         - name: run test coverage calculating
           run: |
               python -m coverage run manage.py test
