--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -18,7 +18,7 @@ jobs:
               pip install coverage
         - name: run test coverage calculating
           run: |
-              python -m coverage run manage.py test
+              poetry run python -m coverage run manage.py test
         - name: publishing info
           uses: paambaati/codeclimate-action@v3.2.0
           env:
