--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -1,5 +1,8 @@
 name: test-cov
 on: push
+env:
+  DJANGO_SECRET: ${{ secrets.DJANGO_SECRET }}
+  DATABASE_URL: 'sqlite:///db.sqlite3'
 jobs:
   my-job:
     runs-on: ubuntu-latest
