task app: add filter for tasks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ psycopg2-binary = "^2.9.5"
 dj-database-url = "^1.0.0"
 django-bootstrap4 = "^22.2"
 coverage = "^6.5.0"
+django-filter = "^22.1"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^5.0.4"
