--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dj-database-url = "^1.0.0"
 django-bootstrap4 = "^22.2"
 coverage = "^6.5.0"
 django-filter = "^22.1"
+rollbar = "^0.16.3"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^5.0.4"
