--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ rollbar = "^0.16.3"
 [tool.poetry.group.dev.dependencies]
 flake8 = "^5.0.4"
 django-extensions = "^3.2.1"
+pytest-django = "^4.5.2"
 
 [build-system]
 requires = ["poetry-core"]
