--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -1,7 +1,7 @@
 name: test-cov
 on: push
 env:
-  DJANGO_SECRET: ${{ secrets.DJANGO_SECRET }}
+  SECRET_KEY: ${{ secrets.DJANGO_SECRET }}
   DATABASE_URL: 'sqlite:///db.sqlite3'
 jobs:
   my-job:
