--- a/docker/services/task-manager/Dockerfile
+++ b/docker/services/task-manager/Dockerfile
@@ -6,7 +6,8 @@ ENV PYTHONDONTWRITEBYTECODE 1
 RUN mkdir /app
 COPY task_manager/ /app/task_manager
 COPY pyproject.toml /app
-COPY README.md manage.py .env docker-entrypoint.sh /app
+COPY README.md manage.py .env /app
+COPY docker/services/task-manager/docker-entrypoint.sh /app
 
 WORKDIR /app
 RUN pip3 install poetry
