--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ coverage = "^6.5.0"
 django-filter = "^22.1"
 rollbar = "^0.16.3"
 django-extensions = "^3.2.1"
+gunicorn = "^20.1.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^5.0.4"
