--- a/.env_example
+++ b/.env_example
@@ -5,5 +5,5 @@ DATABASE_URL = sqlite:///db.sqlite3
 
 ### SECRETS ###
 
-DJANGO_SECRET = 'DJANGO_SECRET_KEY'
+SECRET_KEY = 'DJANGO_SECRET_KEY'
 ROLLBAR = 'ROLLBAR_SECRET'
